--- a/themes/PaperMod/assets/css/core/reset.css
+++ b/themes/PaperMod/assets/css/core/reset.css
@@ -101,13 +101,15 @@ p {
     margin-bottom: 0;
 }
 
-ul {
+ul,
+ol {
     padding: 0;
 }
 
 body,
 figure,
-ul {
+ul,
+ol {
     margin: 0;
 }
 
